--- a/main.html
+++ b/main.html
@@ -1,127 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
-		<table>
-        <thead>
-            <tr>
-                <th colspan="3">Main Table</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td colspan="3">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th colspan="3">Nested Table 2</th>
-                            </tr>
-                            <tr>
-                                <th>Column 1</th>
-                                <th>Column 2</th>
-                                <!-- <th>Column 3</th> -->
-                            </tr>
-							<tr>
-								<td>abc</td>
-								<td>def</td>
-							</tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Item 1</td>
-                                <td>Item 2</td>
-                                <td>Item 3</td>
-                            </tr>
-                            <tr>
-                                <td>Item 4</td>
-                                <td>Item 5</td>
-                                <td>Item 6</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="3">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Column 1</th>
-                                <th>Column 2</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Item A</td>
-                                <td>Item B</td>
-                            </tr>
-                            <tr>
-                                <td>Item C</td>
-                                <td>Item D</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="3">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th colspan="3">Nested Table 3</th>
-                            </tr>
-                            <tr>
-                                <th>Column 1</th>
-                                <th>Column 2</th>
-                                <th>Column 3</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>HTML</td>
-                                <td class="black-background">HTML</td>
-                                <td>HTML</td>
-                            </tr>
-                            <tr>
-                                <td>HTML</td>
-                                <td>HTML</td>
-                                <td>HTML</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="3">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>List</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <ul>
-                                        <li>List item 1</li>
-                                        <li>List item 2</li>
-                                        <li>List item 3</li>
-                                    </ul>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    </table>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        table,td,tr,th{
+            border: 1px solid black;
+        }
+    </style>
+</head>
+<body>
+   <table>
+    <tr>
+        <td>
+            <table>
+                <tr>
+                    <th colspan="2">Nested Table 2</th>
+                </tr>
+
+                <tr>
+                    <th>Column 1</th>
+                    <th>Column2</th>
+                </tr>
+
+                <tr>
+                    <td>abc</td>
+                    <td>def</td>
+                </tr>
+            </table>
+        </td>
+        <td>
+            <table>
+                <tr>
+                    <th>Nested Table 1</th>
+                </tr>
+    
+                <tr>
+                    <td>
+                        <ul>
+                            <li>List item</li>
+                            <li>List item</li>
+                            <li>List item</li>
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+
+    <tr>
+        <td>
+            <table>
+                <tr>
+                    <th colspan="2">Nested Table 3</th>
+                </tr>
+
+                <tr>
+                    <td><a href="#">Nested Table</a></td>
+                    <td>Demo Continued</td>
+                </tr>
+            </table>
+        </td>
+        <td>
+            <table>
+                <tr>
+                    <th>Nested Table 4</th>
+                </tr>
+
+                <tr>
+                    <td style="background-color: black; color: white;">HTML</td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+   </table>
+</body>
 </html>
