--- a/main.html
+++ b/main.html
@@ -18,12 +18,10 @@
                 <tr>
                     <th colspan="2">Nested Table 2</th>
                 </tr>
-
                 <tr>
                     <th>Column 1</th>
-                    <th>Column2</th>
+                    <th>Column 2</th>
                 </tr>
-
                 <tr>
                     <td>abc</td>
                     <td>def</td>
@@ -35,7 +33,6 @@
                 <tr>
                     <th>Nested Table 1</th>
                 </tr>
-    
                 <tr>
                     <td>
                         <ul>
@@ -67,9 +64,8 @@
                 <tr>
                     <th>Nested Table 4</th>
                 </tr>
-
                 <tr>
-                    <td style="background-color: black; color: white;">HTML</td>
+                    <td style="color: white; background-color: black;">HTML</td>
                 </tr>
             </table>
         </td>
